Re-add crude furnace